Fix: Make timeIndicator not overlap with hours on agendaDay

--- a/src/agenda/agenda.css
+++ b/src/agenda/agenda.css
@@ -144,7 +144,7 @@
 .fc-timeline {
 	position: absolute;
 	width: 100%;
-	left: 0;
+	left: 60px;
 	margin: 0;
 	padding: 0;
 	border: none;
